add tendermintx script

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
+# Ethereum config
 PRIVATE_KEY=
-# RPC for deploying contracts
 RPC_URL=
 ETHERSCAN_API_KEY=
-# RPC for Tendermint chain
+
+# Tendermint config
 TENDERMINT_RPC_URL=
+
+# Script config
+CHAIN_ID=
