--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,6 @@ alloy-sol-types = "0.4.2"
 anyhow = "1.0.71"
 async-trait = "0.1.73"
 clap = { version = "4.3.18", features = ["derive"] }
-curve25519-dalek = "4.1.1"
 digest = "0.10.7"
 dotenv = "0.15.0"
 ed25519-consensus = "2.1.0"
@@ -36,7 +35,7 @@ itertools = "0.11.0"
 log = "0.4.19"
 num = "0.4.1"
 plonky2 = { git = "https://github.com/mir-protocol/plonky2.git" }
-plonky2x = { git = "https://github.com/succinctlabs/succinctx.git" }
+plonky2x = { git = "https://github.com/succinctlabs/succinctx.git", branch = "ratan/sha512-pad-fixes" }
 rand = "0.8.5"
 reqwest = "0.11.18"
 serde = "1.0.175"
