--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,8 @@ itertools = "0.11.0"
 log = "0.4.19"
 num = "0.4.1"
 plonky2 = { git = "https://github.com/mir-protocol/plonky2.git" }
-plonky2x = { git = "https://github.com/succinctlabs/succinctx.git" }
+plonky2x = { git = "https://github.com/succinctlabs/succinctx.git", branch = "ratan/succinctx-request" }
+succinctx-client = { git = "https://github.com/succinctlabs/succinctx.git", branch = "ratan/succinctx-request" }
 rand = "0.8.5"
 reqwest = "0.11.18"
 serde = "1.0.175"
@@ -47,3 +48,4 @@ tendermint-proto = "0.33.0"
 tokio = { version = "1.29.1", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
+alloy-primitives = "0.4.2"
