--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,8 @@ itertools = "0.11.0"
 log = "0.4.19"
 num = "0.4.1"
 plonky2 = { git = "https://github.com/mir-protocol/plonky2.git" }
-plonky2x = { git = "https://github.com/succinctlabs/succinctx.git" }
-succinct-client = { git = "https://github.com/succinctlabs/succinctx.git" }
+plonky2x = { git = "https://github.com/succinctlabs/succinctx.git", branch = "ratan/pad-hash-leaves" }
+succinct-client = { git = "https://github.com/succinctlabs/succinctx.git", branch = "ratan/pad-hash-leaves" }
 rand = "0.8.5"
 reqwest = "0.11.18"
 serde = "1.0.175"
