--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ RPC_URL=
 ETHERSCAN_API_KEY=
 
 # Tendermint config
-TENDERMINT_RPC_URL=
+TENDERMINT_RPC_URL=https://public-celestia-rpc.numia.xyz
 
 # Script config
 SUCCINCT_RPC_URL=
