--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ ethers = "2.0.9"
 itertools = "0.11.0"
 log = "0.4.19"
 num = "0.4.1"
-plonky2x = { git = "https://github.com/succinctlabs/succinctx.git", branch = "ratan/lt-fix" }
+plonky2x = { git = "https://github.com/succinctlabs/succinctx.git" }
 succinct-client = { git = "https://github.com/succinctlabs/succinctx.git" }
 rand = "0.8.5"
 reqwest = "0.11.18"
