--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,4 @@ tokio = { version = "1.29.1", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 alloy-primitives = "0.4.2"
+futures = "0.3.30"
